# trojan-oxide

./: .gitignore  Cargo.toml  readme.md
benches/: bench_simd.rs  bench_simd.rs.dep  mod.rs
src/: The Speed Of Lite —— Lite-Tls Specification.md  args.rs  main.rs  protocol.rs  proxy.rs  quic_tunnel.rs  server.rs  utils.rs
src/client/: http.rs  mod.rs  run.rs  socks5.rs
src/client/inbound/: http.rs  listener.rs  mod.rs  socks5.rs
src/client/outbound/: connect.rs  mod.rs  quic.rs  request_cmd.rs  tcp_tls.rs  trojan_auth.rs
src/client/utils/: client_server_connection.rs  client_tcp_stream.rs  client_udp_stream.rs  connection_mode.rs  data_transfer.rs  mod.rs  rustls_utils.rs
src/server/: mod.rs  run.rs  trojan.rs  trojan_stream.rs
src/server/inbound/: acceptor.rs  handler.rs  listener.rs  lite_tls.rs  mod.rs  quic.rs  stream_trait.rs  streams.rs  tcp_tls.rs
src/server/outbound/: connector.rs  fallback.rs  mod.rs  utils.rs
src/server/utils/: inbound_stream.rs  lite_tls.rs  mod.rs  rustls_utils.rs  server_udp_stream.rs  time_aligned_tcp_stream.rs  trojan_inbound_callback.rs
src/simd/: fallback.rs  mod.rs  neon.rs  simd_parse.rs  x86.rs
src/tunnel/: mod.rs  quic.rs  tcp_tls.rs
src/utils/: adapter.rs  buffered_recv.rs  buffers.rs  client_tcp_stream.rs  client_udp_stream.rs  copy.rs  copy_tcp.rs  copy_udp.rs  data_transfer.rs  debug_reader_writer.rs  dns_resolve.rs  either_io.rs  macros.rs  mix_addr.rs  mod.rs  server_udp_stream.rs  splitable.rs  timedout_duplex_io.rs  trojan_udp_stream.rs  udp_relay_buffer.rs  udp_traits.rs  wr_tuple.rs
src/utils/client/: client_tcp_stream.rs  data_transfer.rs  mod.rs
src/utils/dns_utils/: dns_resolver.rs  mod.rs
src/utils/forked_copy/: copy_bidirectional.rs  copy_buf.rs  mod.rs
src/utils/glommio/: copy_bidirectional.rs  copy_buf.rs  mod.rs
src/utils/glommio_utils/: copy_bidirectional.rs  copy_buf.rs  mod.rs  start_tcp_relay_thread.rs
src/utils/latency_utils/: mod.rs
src/utils/lite_tls/: The Journey to The Speed of Lite.md  client_lite_stream.rs  error.rs  leave_tls.rs  lite_tls_stream.rs  mod.rs  server_lite_stream.rs  tls_relay_buffer.rs
src/utils/udp/: copy_udp.rs  copy_udp_bidirectional.rs  mod.rs  trojan_udp_stream.rs  udp_relay_buffer.rs  udp_shutdown.rs  udp_traits.rs
