[package]
name = "trojan-oxide"
version = "0.1.0"
authors = ["3andne <3andne@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
clap = "2.33.3"
anyhow = { version = "1.0.41" }
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
futures = "0.3"
err-derive = "0.3.0"
directories = "3.0"
structopt = "0.3.21"
sha2 = "0.9.5"
bytes = "1.0.1"
pin-project-lite = "0.2.7"
lazy_static = "1.4.0"
rustls-native-certs = "*"

[dev-dependencies]
criterion = "0.3"

[dependencies.quinn]
version = "0.7.2"
optional = true

[dependencies.quinn-proto]
version = "0.7.3"
optional = true

[dependencies.tokio-rustls]
version = "0.22.0"
optional = true

[dependencies.rcgen]
version = "0.8.11"
optional = true

[target.'cfg(unix)'.dependencies]
glommio = "0.5.0"
num_cpus = "*"

#[[bench]]
#name = "bench_simd"
#harness = false

[profile.release]
# codegen-units = 1
incremental = false
# lto = true
opt-level = 3

[features]
server = []
client = []
tcp_tls = ["tokio-rustls"]
lite_tls = ["tokio-rustls"]
quic = ["quinn", "quinn-proto", "rcgen"]
udp = []
debug_info = []
full = ["server", "client", "tcp_tls", "quic", "udp", "lite_tls"]
dev = ["server", "client", "tcp_tls", "quic", "udp", "lite_tls", "debug_info"]
server_full = ["server", "tcp_tls", "quic", "udp", "lite_tls"]
client_full = ["client", "tcp_tls", "quic", "udp", "lite_tls"]
default = ["full", "debug_info"]
