[package]
name = "trojan-oxide"
version = "0.1.0"
authors = ["3andne <3andne@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
clap = "2.34.0"
anyhow = "1.0.51"
tracing = "0.1.26"
tracing-subscriber = "0.3.3"
futures = "0.3"
err-derive = "0.3.0"
directories = "4.0.1"
structopt = "0.3.21"
sha2 = "0.10.0"
bytes = "1.0.1"
pin-project-lite = "0.2.7"
lazy_static = "1.4.0"
rustls-native-certs = { version = "0.6.1" }
mimalloc = { version = "*", default-features = false }
fxhash = "0.2.1"
rustls-pemfile = "*"

[dependencies.quinn]
version = "0.8.0"
optional = true

[dependencies.quinn-proto]
version = "0.8.0"
optional = true

[dependencies.tokio-rustls]
version = "0.23.1"
optional = true

[dependencies.rcgen]
version = "0.8.11"
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.6.0"
num_cpus = "*"

[profile.release]
# codegen-units = 1
incremental = false
# lto = true
opt-level = 3

[features]
server = []
client = []
tcp_tls = ["tokio-rustls"]
lite_tls = ["tokio-rustls"]
zio = []
quic = ["quinn", "quinn-proto", "rcgen"]
udp = []
udp_info = []
debug_info = ["udp_info"]
full = ["server", "client", "tcp_tls", "quic", "udp", "lite_tls"]
dev = ["server", "client", "tcp_tls", "quic", "udp", "lite_tls", "debug_info"]
server_full = ["server", "tcp_tls", "quic", "udp", "lite_tls"]
client_full = ["client", "tcp_tls", "quic", "udp", "lite_tls"]
default = ["full"]
